# icp_map_combiner

./: CMakeLists.txt  README.md  package.xml
export/: combined_map.pgm
map/: map1.pgm  map2.pgm  rotated_map2.pgm  translated_map2.pgm
pos/: after  before
src/: main.cpp
